syntax = "proto3";

package chat;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/marwanelmessiry/ChatRoomGrpc/proto";

message Message {
  string sender = 1;
  string recipient = 2;
  string content = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message SendMessageRequest {
  Message message = 1;
}

message SendMessageResponse {}

message ReceiveMessagesRequest {
  string user = 1;
}

message ReceiveMessagesResponse {
  repeated Message messages = 1;
}

service ChatApp {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc ReceiveMessages(ReceiveMessagesRequest) returns (stream Message);
}